--- a/packages/tserr-vue/index.html
+++ b/packages/tserr-vue/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>TsErr Problems View</title>
+    <style>
+::-webkit-scrollbar {
+  width: .7em;
+  height: .7em;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+   border-radius: 10px;
+   border: 2px solid slategrey;
+}
+</style>
   </head>
   <body>
     <div id="app"></div>
