fix: scrollbar corner styling

--- a/packages/tserr-vue/index.html
+++ b/packages/tserr-vue/index.html
@@ -17,6 +17,14 @@
    border-radius: 10px;
    border: 2px solid slategrey;
 }
+
+::-webkit-scrollbar-corner {
+/*
+background-image: url(resources/corner.png);
+background-repeat: no-repeat;
+*/
+background-color: rgba(0, 0, 0, 0.3);
+}
 </style>
   </head>
   <body>
