--- a/packages/tserr-vue/index.html
+++ b/packages/tserr-vue/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      window.TsErrPort = '3100';
+    </script>
     <title>TsErr Problems View</title>
     <style>
-::-webkit-scrollbar {
-  width: .7em;
-  height: .7em;
-}
+      ::-webkit-scrollbar {
+        width: 0.7em;
+        height: 0.7em;
+      }
 
+      ::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+        border: 2px solid slategrey;
+      }
 
-::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.3);
-   border-radius: 10px;
-   border: 2px solid slategrey;
-}
-
-::-webkit-scrollbar-corner {
-/*
+      ::-webkit-scrollbar-corner {
+        /*
 background-image: url(resources/corner.png);
 background-repeat: no-repeat;
 */
-background-color: rgba(0, 0, 0, 0.3);
-}
-</style>
+        background-color: rgba(0, 0, 0, 0.3);
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
