chore: replace vuetify with quasar

--- a/packages/tserr-vue/index.html
+++ b/packages/tserr-vue/index.html
@@ -28,6 +28,11 @@ background-repeat: no-repeat;
 */
         background-color: rgba(0, 0, 0, 0.3);
       }
+      body {
+        background-color: rgba(0, 0, 0, 0.0);
+      }
+
+
     </style>
   </head>
   <body>
